# zradar

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  BENCHMARKS.md  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  LICENSE_EE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  config.server.toml  config.test.toml  config.toml.example  config.worker.toml  deny.toml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-start.sh  env.example  justfile
crates/applications/zradar-server/: Cargo.toml
crates/applications/zradar-server/src/: auth.rs  health.rs  main.rs
crates/applications/zradar-worker/: Cargo.toml
crates/applications/zradar-worker/src/: main.rs  worker.rs
crates/auth/zradar-auth-config/: Cargo.toml
crates/auth/zradar-auth-config/src/: lib.rs
crates/core/zradar-metrics/: Cargo.toml
crates/core/zradar-metrics/src/: hub.rs  ingest.rs  lib.rs  primitive.rs
crates/core/zradar-migrations/: Cargo.toml
crates/core/zradar-migrations/src/: lib.rs  provider.rs  registry.rs  types.rs
crates/core/zradar-models/: Cargo.toml
crates/core/zradar-models/src/: audit_log.rs  context.rs  evaluation_score.rs  file_list.rs  ingest_batch.rs  lib.rs  log_record.rs  metric.rs  project_settings.rs  retention_policy.rs  span.rs  workspace.rs  workspace_settings.rs
crates/core/zradar-parquet/: Cargo.toml
crates/core/zradar-parquet/benches/: buffer_bench.rs  query_bench.rs  write_bench.rs
crates/core/zradar-parquet/src/: compactor.rs  disk_cache.rs  engine.rs  file_mover.rs  flush_worker.rs  lib.rs  memory_cache.rs  reader.rs  recovery.rs  retention_job.rs  telemetry_reader.rs  telemetry_writer.rs  util.rs  write_buffer.rs  writer.rs
crates/core/zradar-plugins/: Cargo.toml
crates/core/zradar-plugins/src/: config.rs  error.rs  lib.rs  loader.rs  plugin.rs  registry.rs
crates/core/zradar-policy/: Cargo.toml
crates/core/zradar-policy/src/: enforcer.rs  engine.rs  errors.rs  lib.rs  traits.rs  types.rs  usage.rs
crates/core/zradar-retention/: Cargo.toml
crates/core/zradar-retention/src/: cleanup.rs  config.rs  enforcer.rs  file_reclaimer.rs  lib.rs  storage_usage_daily.rs
crates/core/zradar-traits/: Cargo.toml
crates/core/zradar-traits/src/: admin_authorizer.rs  auth.rs  auth_context.rs  auth_resolution.rs  block_storage.rs  capability.rs  content_capture.rs  errors.rs  file_lease.rs  job_queue.rs  lib.rs  query_authorizer.rs
crates/core/zradar-wal/: Cargo.toml
crates/core/zradar-wal/benches/: load.rs
crates/core/zradar-wal/src/: backpressure.rs  batch.rs  checkpoint.rs  config.rs  flusher.rs  group_commit.rs  janitor.rs  lib.rs  metrics.rs  record.rs  replay.rs  segment.rs
crates/core/zradar-wal/tests/: batch_wal.rs
crates/plugins/zradar-plugin-clickhouse/: Cargo.toml
crates/plugins/zradar-plugin-clickhouse/migrations/: 20241123000001_create_telemetry_schema.sql  README.md
crates/plugins/zradar-plugin-clickhouse/src/: client.rs  lib.rs  plugin.rs  reader.rs  score_impl.rs  writer.rs
crates/plugins/zradar-plugin-local/: Cargo.toml
crates/plugins/zradar-plugin-local/src/: lib.rs  plugin.rs  storage.rs
crates/plugins/zradar-plugin-postgres/: Cargo.toml
crates/plugins/zradar-plugin-postgres/migrations/: 001_core_tables.sql  001_init.sql  002_organizations.sql  003_projects.sql  004_permissions_roles.sql  005_api_keys_audit.sql  006_job_queue.sql  007_seed_permissions.sql  008_evaluation_scores.sql  009_telemetry_tables.sql  010_file_list_stream_stats.sql  012_project_settings.sql  013_retention_policies.sql  014_audit_logs.sql  015_file_list_indexes.sql  016_file_list_wal_offset.sql  017_policies.sql  018_usage_events.sql  019_usage_rollups.sql  020_policy_audit_thresholds.sql  022_storage_cleanup_daily.sql  (+3 more)
crates/plugins/zradar-plugin-redis/: Cargo.toml
crates/plugins/zradar-plugin-s3/: Cargo.toml
crates/runtime/zradar-runtime/: Cargo.toml
crates/services/api/: Cargo.toml  build.rs
crates/services/api-optel/: Cargo.toml
examples/anthropic/python/: example.py  pyproject.toml
examples/crewai/python/: example.py  pyproject.toml
examples/google-adk/python/: example.py  pyproject.toml
examples/langchain/python/: example.py  pyproject.toml
examples/llamaindex/python/: example.py  pyproject.toml
examples/openai-agents/python/: example.py  pyproject.toml
examples/openai/python/: example.py  pyproject.toml
examples/python/: README.md  pyproject.toml  requirements.txt  send_score.py  send_trace.py
test_functional/: Cargo.toml  README.md  functional_tests.rs  lib.rs
test_functional/fixtures/: dcgm_metrics.prom  nim_vllm_metrics.prom
test_functional/fixtures/nemo/: build.rs  evaluator_score.binpb  evaluator_score.meta.json  guardrails_action_passthrough.binpb  guardrails_action_passthrough.meta.json  guardrails_input_halt.binpb  guardrails_input_halt.meta.json  nat_multi_function.binpb  nat_multi_function.meta.json  nat_simple_workflow.binpb  nat_simple_workflow.meta.json  openinference_langchain.binpb  openinference_langchain.meta.json
test_functional/helpers/: api_client.rs  api_client.rs.bak2  api_client.rs.bak4  db_client.rs  dual_transport.rs  fixtures.rs  grpc_client.rs  mod.rs  nim_mocks.rs  polling.rs  query_transport.rs  test_env.rs  test_helpers.rs  transport.rs  zradar_grpc_client.rs
test_functional/helpers/transport_api/: grpc.rs  mod.rs  response.rs
test_functional/scenarios/: mod.rs  test_agent_analytics.rs  test_agent_load.rs  test_analytics.rs  test_api_keys.rs  test_audit_logging.rs  test_auth.rs  test_compression.rs  test_e2e.rs  test_e2e_fixtures.rs  test_e2e_multi_tenant.rs  test_e2e_multi_workspace.rs  test_grpc_api.rs  test_health.rs  test_logs.rs  test_metrics.rs  test_nemo_gap_fixes.rs  test_nemo_phase1.rs  test_nemo_phase2.rs  test_nemo_phase4.rs  test_nim_collector.rs  test_organizations.rs  test_parquet_metadata.rs  test_policy_enforcement.rs  test_projects.rs  test_query_api.rs  test_retention.rs  test_scores.rs  test_security.rs  test_span_types.rs  test_telemetry_storage.rs  test_tracing.rs
(+1033 files in other folders)
