[workspace]
resolver = "2"
members = [
    # Core (traits and models)
    "crates/core/zradar-models",
    "crates/core/zradar-traits",
    "crates/core/zradar-parquet",
    "crates/core/zradar-retention",
    "crates/core/zradar-wal",

    # Storage backends
    "crates/plugins/zradar-plugin-postgres",
    "crates/plugins/zradar-plugin-s3",

    # Auth implementations (OSS: config key only)
    "crates/auth/zradar-auth-config",

    # Runtime (pluggable server startup)
    "crates/runtime/zradar-runtime",

    # Services (business logic)
    "crates/services/api",
    "crates/services/api-optel",

    # Applications (executables)
    "crates/applications/zradar-server",

    # Functional Tests
    "test_functional",
]

[workspace.package]
edition = "2024"
rustversion = "1.93.0"

# Shared workspace dependencies
[workspace.dependencies]
# OpenTelemetry Protocol - THE CONTRACT (v0.4 uses tonic 0.9)
opentelemetry-proto = { version = "0.4", features = ["gen-tonic", "trace", "metrics", "logs"] }

# gRPC/Async (must match opentelemetry-proto's tonic version)
tonic = { version = "0.9", features = ["gzip"] }
prost = "0.11"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
async-trait = "0.1"

# Object storage (S3-compatible via opendal)
opendal = { version = "0.49", features = ["services-s3"] }

# Web framework (upgraded to 0.7 for utoipa support)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }

# Auto-documentation
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "migrate"] }

# Arrow / Parquet / DataFusion
# DataFusion 44 uses arrow/parquet 53 internally; pin to the same major to avoid duplicate crates.
arrow = "53"
parquet = { version = "53", features = ["arrow", "async"] }
datafusion = { version = "44", features = ["parquet"] }

# Concurrent data structures
dashmap = "5"
parking_lot = "0.12"
lru = "0.12"

# Byte buffers
bytes = "1"

# Hashing
crc32fast = "1"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# Internal workspace crates (Core)
zradar-models = { path = "crates/core/zradar-models" }
zradar-traits = { path = "crates/core/zradar-traits" }
zradar-parquet = { path = "crates/core/zradar-parquet" }
zradar-retention = { path = "crates/core/zradar-retention" }
zradar-wal = { path = "crates/core/zradar-wal" }

# Internal workspace crates (Services)
api = { path = "crates/services/api" }
api-optel = { path = "crates/services/api-optel" }

# Storage backends
zradar-plugin-postgres = { path = "crates/plugins/zradar-plugin-postgres" }
zradar-plugin-s3 = { path = "crates/plugins/zradar-plugin-s3" }

# Profile options that do NOT improve linker speed:
# - opt-level, incremental, debug: affect compile/codegen only
# - strip: runs after linking; only shrinks binary
# - lto / codegen-units: more link-time work (LTO runs at link time)

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
split-debuginfo = "unpacked"
debug = 1
opt-level = 0
incremental = true

[profile.test]
split-debuginfo = "unpacked"
debug = 1
incremental = true

[profile.release]
opt-level = 3
lto = false
codegen-units = 16
debug = 1
strip = false
