[package]
name = "zradar-server"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
description = "zradar server binary"

[[bin]]
name = "zradar"
path = "src/main.rs"

[dependencies]
# Core
zradar-models = { path = "../../core/zradar-models" }
zradar-traits = { path = "../../core/zradar-traits" }
zradar-plugins = { path = "../../core/zradar-plugins" }
zradar-migrations = { path = "../../core/zradar-migrations" }
zradar-parquet = { path = "../../core/zradar-parquet" }

# Services
api-optel = { path = "../../services/api-optel" }
api = { path = "../../services/api" }

# Plugins (direct use, no infrastructure layer)
# Note: Multiple plugins cause symbol conflicts with extern "C" functions
# Only include what's needed for current configuration
zradar-plugin-postgres = { path = "../../plugins/zradar-plugin-postgres" }
zradar-plugin-local = { path = "../../plugins/zradar-plugin-local" }
# zradar-plugin-clickhouse = { path = "../../plugins/zradar-plugin-clickhouse" }  # Disabled - using Postgres only

# Async traits
async-trait = { workspace = true }
uuid = { workspace = true }

# OpenTelemetry Protocol
opentelemetry-proto = { workspace = true }

# gRPC
tonic = { workspace = true }
tokio = { workspace = true }

# Database
sqlx = { workspace = true }
clickhouse = { workspace = true }

# HTTP/API
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
