[package]
name = "zradar-server"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "zradar OSS standalone binary — config API-key auth, no platform wrapper dependencies"

[[bin]]
name = "zradar"
path = "src/main.rs"

[dependencies]
# OSS runtime and auth
zradar-runtime = { path = "../../runtime/zradar-runtime" }
zradar-auth-config = { path = "../../auth/zradar-auth-config" }

# Core (for Config type and traits)
zradar-models = { path = "../../core/zradar-models" }
zradar-traits = { path = "../../core/zradar-traits" }

# Async
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
