[package]
name = "zradar-worker"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "zradar-worker"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono", "migrate"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
opentelemetry-proto = { workspace = true }

# Internal dependencies
zradar-models = { path = "../../core/zradar-models" }
zradar-traits = { path = "../../core/zradar-traits" }
api-optel = { path = "../../services/api-optel" }

# Plugins (direct use, no more infrastructure layer)
zradar-plugin-clickhouse = { path = "../../plugins/zradar-plugin-clickhouse" }
zradar-plugin-postgres = { path = "../../plugins/zradar-plugin-postgres" }
zradar-plugin-local = { path = "../../plugins/zradar-plugin-local" }
