[package]
name = "zradar-models"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
description = "Data models for zradar telemetry ingestion"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# ClickHouse Row derive
clickhouse = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }

# SQL database support
sqlx = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

