[package]
name = "zradar-parquet"
version = "0.1.0"
edition.workspace = true
description = "Parquet storage layer for zradar — write and query telemetry via Arrow/DataFusion"

[dev-dependencies]
tempfile = "3"

[dependencies]
# Arrow ecosystem
arrow = { workspace = true }
parquet = { workspace = true }
datafusion = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }

# Serialization / Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Concurrent data structures (M07-04 write buffer, M07-06 memory cache)
dashmap = { workspace = true }
parking_lot = { workspace = true }
lru = { workspace = true }
bytes = { workspace = true }

# Internal workspace crates
zradar-models = { workspace = true }
zradar-traits = { workspace = true }
