[package]
name = "zradar-plugins"
version = "0.1.0"
edition.workspace = true
description = "Plugin system for zradar - dynamic loading and registry"

[features]
default = []
dynamic-loading = ["libloading"]

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# For dynamic .so/.dylib loading
libloading = { version = "0.8", optional = true }

# Internal dependencies
zradar-models = { workspace = true }
zradar-traits = { workspace = true }

