[package]
name = "zradar-retention"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Retention system for zradar — config, cleanup, and query enforcement"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }

# Concurrency (RetentionConfigStore)
dashmap = "5"

# Serialization / Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

# Internal workspace crates
zradar-models = { workspace = true }
zradar-traits = { workspace = true }

[dev-dependencies]
tempfile = "3"
