[package]
name = "zradar-traits"
version = "0.1.0"
edition.workspace = true

[features]
default = ["sqlx"]
# Enable utoipa derives for OpenAPI documentation
utoipa = ["dep:utoipa"]
# Enable sqlx derives (FromRow) — sqlx is always a dep so this is always active by default
sqlx = []

[dependencies]
async-trait = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Optional: OpenAPI documentation
utoipa = { workspace = true, optional = true }
# SQL database support (required for Postgres plugin)
sqlx = { workspace = true }

# HTTP (for AdminAuthorizer HeaderMap parameter)
axum = { workspace = true }

# Internal dependencies
zradar-models = { path = "../zradar-models", default-features = false }
