[package]
name = "zradar-traits"
version.workspace = true
edition.workspace = true

[features]
default = ["sqlx"]
# Enable utoipa derives for OpenAPI documentation
utoipa = ["dep:utoipa"]
# Enable sqlx derives (FromRow) — sqlx is always a dep so this is always active by default
sqlx = []

[dependencies]
async-trait = { workspace = true }
# Concurrency: backs the in-process FileLeaseRegistry refcount map.
dashmap = "5"
uuid = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Optional: OpenAPI documentation
utoipa = { workspace = true, optional = true }
# SQL database support (required for Postgres plugin)
sqlx = { workspace = true }

# HTTP (for AdminAuthorizer HeaderMap parameter)
axum = { workspace = true }

# Internal dependencies
zradar-models = { path = "../zradar-models", default-features = false }

[dev-dependencies]
# Drives the FileLeaseRegistry concurrency test.
tokio = { workspace = true }
