[package]
name = "zradar-wal"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
crc32fast = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
chrono = { workspace = true }
tempfile = "3"
proptest = "1"
criterion = { workspace = true }

[[bench]]
name = "load"
harness = false

[lints]
workspace = true
