[package]
name = "zradar-wal"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
zradar-models = { path = "../zradar-models" }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
crc32fast = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
chrono = { workspace = true }
tempfile = "3"
proptest = "1"
criterion = { workspace = true }

[[bench]]
name = "load"
harness = false

[lints]
workspace = true
