[package]
name = "zradar-plugin-clickhouse"
version = "0.1.0"
edition.workspace = true
description = "ClickHouse plugin for zradar - telemetry storage and analytics"

[lib]
# Build as both rlib (for static linking) and cdylib (for dynamic loading)
crate-type = ["rlib", "cdylib"]

[features]
default = []
# Enable this for dynamic plugin loading
dynamic = []

[dependencies]
# Core dependencies
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# ClickHouse
clickhouse = { workspace = true }

# Cryptography (for migrations)
sha2 = "0.10"

# Internal dependencies
zradar-models = { workspace = true }
zradar-traits = { workspace = true }
zradar-migrations = { path = "../../core/zradar-migrations" }
zradar-plugins = { workspace = true }

