[package]
name = "zradar-plugin-local"
version = "0.1.0"
edition.workspace = true
description = "Local filesystem storage plugin for development"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Async
tokio = { workspace = true, features = ["fs"] }
async-trait = { workspace = true }

# Utilities
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Internal dependencies
zradar-traits = { workspace = true }
zradar-plugins = { workspace = true }

