[package]
name = "zradar-plugin-postgres"
version = "0.1.0"
edition.workspace = true
description = "PostgreSQL plugin - default implementation for all repositories"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "uuid", "chrono", "migrate", "json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
zradar-models = { workspace = true }
zradar-traits = { workspace = true }

[build-dependencies]
# For embedding migrations

