[package]
name = "zradar-plugin-redis"
version = "0.1.0"
edition.workspace = true
description = "Redis plugin for zradar (queue and cache)"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Redis
redis = { workspace = true }

# For hybrid queue (PostgreSQL as source of truth)
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }

# Internal
zradar-models = { workspace = true }
zradar-traits = { workspace = true }
zradar-plugins = { workspace = true }

