[package]
name = "zradar-plugin-s3"
version = "0.1.0"
edition.workspace = true
description = "S3 storage plugin for zradar"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Object storage
opendal = { workspace = true }

# Internal
zradar-models = { workspace = true }
zradar-traits = { workspace = true }

